# Song-Popularity-Prediction

./: README.md  final_probabilities.csv  final_submission.ipynb  main.py  pyproject.toml
codes/: test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  test5.ipynb  test6.ipynb  test8.ipynb  test9.py
submissions/: submission_1.csv  submission_10.csv  submission_2.csv  submission_4.csv  submission_4_reg.csv  submission_5.csv  submission_6.csv  submission_6_1.csv  submission_6_prob.csv  submission_6_prob_1.csv  submission_7.csv  submission_7_probabilities.csv  submission_8.csv  submission_8_probabilities.csv  submission_9.csv  submission_9_probabilities.csv
