[project]
name = "umc301"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
